[metadata]
name = pdpy11
version = attr: pdpy11.__version__
author = Ivanq
author_email = imachug@gmail.com
description = Cross-platform assembler for PDP-11
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pdpy11/pdpy11
project_urls =
    Bug Tracker = https://github.com/pdpy11/pdpy11/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Assembly
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Assemblers

[options]
package_dir =
    = .
packages = pdpy11
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pdpy11 = pdpy11:main_cli
